# ngrx-utils

./: .angular-cli.json  .gitignore  .prettierignore  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  angular.json  angular.tsconfig.json  build-config.js  docker-compose.yml  jest.config.js  karma.conf.js  lerna.json  migrations.json  ngc.tsconfig.json  nx.json  package-lock.json  package.json  packages.bzl  pnpm-lock.yaml  protractor.conf.js  setup-jest.ts  setupJest.ts  test.actions.ts  test.js  test.ts  tests.js  tsconfig.base.json  tsconfig.json  tsconfig.lint.json  tsconfig.spec.json  tslint.json
.circleci/: bazel.rc  config.yml
apps/example/e2e/: app.e2e-spec.ts  tsconfig.e2e.json
apps/example/src/: index.html  tsconfig.app.json
apps/ngrx-utils/: .eslintrc.json  jest.config.js  jest.config.ts  project.json  tslint.json
apps/ngrx-utils-e2e/: cypress.json  project.json
apps/ngrx-utils/src/: index.html
example-app/: test.ts  tsconfig.app.json  tsconfig.spec.json
example-app/app/: app.module.ts  routes.ts
example-app/app/auth/: auth.module.ts
example-app/app/books/: books.module.ts
example-app/app/core/: core.module.ts
example-app/app/material/: material.module.ts
example-app/app/reducers/: index.ts
example-app/app/shared/: utils.ts
libs/ng/: jest.config.js  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json  tslint.json
libs/ng/src/: index.ts
libs/rx/: jest.config.js  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json
libs/rx/src/: index.d.ts.map  index.ts  ngrx-utils-rx.d.ts.map
libs/store/: README.md  jest.config.js  ng-package.json  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  tslint.json
libs/store/src/: index.ts
libs/store/testing/: package.json
modules/cli/: CHANGELOG.md  package.json  rollup.config.js  tsconfig-build.json  tsconfig.json
modules/cli/spec/: index.spec.ts  tsconfig.json
modules/cli/src/: collect-metadata.ts  index.ts  path-wrapper.ts  printer.ts
modules/effects/: CHANGELOG.md  package.json  rollup.config.js  tsconfig-build.json  tsconfig.json
modules/effects/spec/: index.spec.ts  tsconfig.json  tsconfig.spec.json
modules/effects/src/: index.ts  ofAction.ts
modules/store/: CHANGELOG.md  package.json  public_api.ts  rollup.config.js  tsconfig-build.json  tsconfig.json
modules/store/decorators/: public_api.ts
modules/store/directives/: public_api.ts
modules/store/operators/: public_api.ts
modules/store/spec/: index.spec.ts  ngLet.spec.ts  tsconfig.json  tsconfig.spec.json  web-worker.spec.ts
modules/store/src/: index.ts  module.ts  ngLet.ts  pluck.ts  select.ts  untilDestroy.ts  web-worker.service.ts
projects/: BUILD.bazel  LICENSE  PERF_NOTES.md  license-banner.txt  tsconfig-build.json
projects/example/: BUILD.bazel  karma.conf.js  tsconfig.app.json  tsconfig.spec.json
projects/example/src/: BUILD.bazel  index.html  polyfills.ts  test.ts
projects/example/src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts
projects/example/src/assets/: BUILD.bazel
projects/example/src/environments/: environment.ts
projects/schematics/: BUILD.bazel  collection.json  package.json  tsconfig-build.json
projects/schematics/action-helper/: README.md  index.ts  schema.d.ts  schema.json
projects/schematics/test/: haha.actions.ts  new.actions.ts
projects/schematics/utility/: ast-utils.ts  change.ts  config.ts  find-module.ts  find-module_spec.ts  latest-versions.ts  ng-ast-utils.ts  parse-name.ts  parse-name_spec.ts  route-utils.ts  validation.ts
projects/schematics/utility/test/: create-app-module.ts
projects/store/: BUILD.bazel  README.md  karma.conf.js  ng-package.json  ng-package.prod.json  package.json  public_api.ts  test.ts  tsconfig-build.json  tsconfig.lint.json  tsconfig.spec.json
projects/store/src/: public_api.ts  store.ts
projects/store/src/decorators/: BUILD.bazel  dispatch.ts  index.ts  ngrx-select.module.ts  ngrx-select.ts  pluck.ts  select.ts
projects/store/src/directives/: BUILD.bazel  index.ts  ngLet.ts  routerLinkMatch.ts
projects/store/src/lib/decorators/: dispatch.ts  ngrx-select.module.ts  select.ts
projects/store/src/lib/directives/: routerLinkActiveMatch.ts
projects/store/src/lib/operators/: index.ts
projects/store/src/operators/: BUILD.bazel  index.ts  pluck.ts  untilDestroy.ts
projects/store/src/pipes/: BUILD.bazel  index.ts  push.ts
projects/store/src/services/: window.ts
projects/store/src/spec/decorators/: pluck.spec.ts
projects/store/src/spec/directives/: ngLet.spec.ts
projects/store/test/: BUILD.bazel  dispatch.spec.ts  ngrx-select-module.spec.ts  ngrx-select.spec.ts  push.spec.ts  routerLinkActiveMatch.spec.ts  select.spec.ts
projects/store/test/decorators/: dispatch.spec.ts  ngrx-select.spec.ts  pluck.spec.ts  select.spec.ts
projects/store/test/directives/: ngLet.spec.ts  routerLinkMatch.spec.ts
projects/store/test/operators/: BUILD.bazel  pluck.spec.ts  untilDestroy.spec.ts
projects/store/test/pipes/: helpers.ts  push.spec.ts
projects/store/test/services/: window.spec.ts
projects/store/test/utils/: index.ts  spies.spec.ts
scripts/release/: publish-next.sh  publish.sh
test/: angular-test-init-spec.ts
tools/: BUILD.bazel  bazel.rc  bazel_stamp_vars.sh  defaults.bzl  package.json
tools/gulp/: gulpfile.ts  packages.ts  tsconfig.json
tools/gulp/tasks/: aot.ts  builds.ts  changelog.ts  ci.ts  clean.ts  coverage.ts  default.ts  deploy-github.ts  development.ts  e2e.ts  example-module.ts  lint.ts  material-release.ts  payload.ts  publish.ts  (+3 more)
tools/ngcontainer/: Dockerfile  README.md  publish.sh
tools/package-tools/: build-bundles.ts  build-config.ts  build-notes.md  build-package.ts  build-release.ts  compile-entry-point.ts  entry-point-package-json.ts  index.ts  inline-resources.ts  metadata-reexport.ts  ngc-compile.ts  rollup-globals.ts  secondary-entry-points.ts  typescript-transpile.ts  typings-reexport.ts  utils.ts
tools/testing/: BUILD.bazel  bootstrap_browser_tests.ts  bootstrap_node_tests.ts
(+145 files in other folders)
