package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

exports_files([
    "tsconfig.json",
    "tsconfig.spec.json",
    "LICENSE",
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@yarn//:yarn",
)

alias(
    name = "buildtools",
    actual = "@com_github_bazelbuild_buildtools//buildifier",
)

# NOTE: this may move to node_modules/BUILD in a later release
node_modules_filegroup(
    name = "node_modules",
    packages = [
        "jasmine",
        "reflect-metadata",
        "rxjs",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "zone.js",
        "@angular",
        "@ngrx",
        "@types",
    ],
)
