package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

exports_files([
    "tsconfig.json",
    "tsconfig.spec.json",
    "LICENSE",
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@yarn//:yarn",
)

alias(
    name = "buildtools",
    actual = "@com_github_bazelbuild_buildtools//buildifier",
)

# NOTE: this may move to node_modules/BUILD in a later release
node_modules_filegroup(
    name = "node_modules",
    packages = [
        "jasmine",
        "reflect-metadata",
        "rxjs",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "zone.js",
        "@angular",
        "@ngrx",
        "@types",
    ],
)

# Glob pattern that matches all Angular testing bundles.
ANGULAR_TESTING = [
    "node_modules/@angular/*/bundles/*-testing.umd.js",
    # The compiler and the dynamic platform-browser should be visible only in tests
    "node_modules/@angular/compiler/bundles/*.umd.js",
    "node_modules/@angular/platform-browser-dynamic/bundles/*.umd.js",
]

filegroup(
    name = "angular_bundles",
    srcs = glob(
        ["node_modules/@angular/*/bundles/*.umd.js"],
        exclude = ANGULAR_TESTING,
    ),
)

filegroup(
    name = "angular_test_bundles",
    testonly = 1,
    srcs = glob(ANGULAR_TESTING),
)

# Files necessary for unit tests that use zonejs
filegroup(
    name = "web_test_bootstrap_scripts",
    # The order of these deps is important.
    # Do not sort.
    srcs = [
        "//:node_modules/reflect-metadata/Reflect.js",
        "//:node_modules/zone.js/dist/zone.js",
        "//:node_modules/zone.js/dist/async-test.js",
        "//:node_modules/zone.js/dist/sync-test.js",
        "//:node_modules/zone.js/dist/fake-async-test.js",
        "//:node_modules/zone.js/dist/proxy.js",
        "//:node_modules/zone.js/dist/jasmine-patch.js",
    ],
)

filegroup(
    name = "tslib_bundle",
    testonly = 1,
    srcs = glob(["node_modules/tslib/tslib.js"]),
)
