package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package")

exports_files([
    "tsconfig-build.json",
    "tsconfig.spec.json",
])

ng_module(
    name = "store",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = ["test.ts", "test/**/*.ts"],
    ),
    module_name = "@ngrx-utils/store",
    tsconfig = "//projects/store:tsconfig-build.json",
    deps = [
        "@rxjs",
        "@rxjs//operators",
    ],
)

# Creates the @angular/material package published to npm.
ng_package(
    name = "npm_package",
    srcs = glob(["**/*.externs.js"] + ["package.json"]),
    entry_point = "projects/store/index.js",
    tags = ["publish"],
    deps = [
        ":store",
        "@rxjs",
        "@rxjs//operators",
    ],
)
