package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ng_module(
    name = "src",
    srcs = glob(
        [
            "*.ts",
            "environments/*.ts",
        ],
        exclude = ["test.ts"],
    ),
    tsconfig = "//projects/example:tsconfig.app.json",
    deps = [
        "//projects/example/src/app",
        "@rxjs",
    ],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

STATIC_FILES = [
    "favicon.ico",
    "index.html",
    "styles.css",
    ":zone.js",
]

ts_devserver(
    name = "devserver",
    data = ["//projects/example/src/assets"],
    entry_module = "ngrx_utils/projects/example/src/main",
    scripts = ["//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = STATIC_FILES,
    deps = [":src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")

rollup_bundle(
    name = "bundle",
    entry_point = "ngrx_utils/projects/example/src/main",
    deps = [":src"],
)

nodejs_binary(
    name = "prodserver",
    args = ["./projects/example/src"],
    data = STATIC_FILES + [
        ":bundle",
        "//projects/example/src/assets",
    ],
    entry_point = "http-server/bin/http-server",
)
