load("//tools:defaults.bzl", "ts_test_library", "jasmine_node_test", "ts_web_test")

ts_test_library(
    name = "test_lib",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//projects/store",
        "@ngrx//modules/store",
        "@rxjs",
        "@rxjs//operators",
    ],
)

# ts_web_test(
#     name = "web_test",
#     deps = [
#         ":test_lib",
#     ],
# )

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
