package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "operators",
    srcs = glob(
        [
            "*.ts",
        ],
    ),
    module_name = "@ngrx-utils/store/operators",
    tsconfig = "//projects/store:tsconfig-build.json",
    deps = [
        "@rxjs",
        "@rxjs//operators",
    ],
)
