load("//tools:defaults.bzl", "jasmine_node_test", "ts_test_library", "ts_web_test")

ts_test_library(
    name = "test_lib",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//projects/store",
        "@rxjs",
        "@rxjs//operators",
    ],
)

# ts_web_test(
#     name = "web_test",
#     deps = [
#         ":test_lib",
#     ],
# )

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
